# mlops_cmc_2023

./: .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: config.yaml
data/: test_data.csv.dvc  train_data.csv.dvc
mlops_cmc_2023/: distances.py  export.py  get_basic_dataset.py  infer.py  knn_classifier.py  predicted_labels.csv  train.py  triton_client.py
mlops_cmc_2023/mlruns/0/: meta.yaml
mlops_cmc_2023/mlruns/0/5be7d403bd254774958d7907c32537c3/: meta.yaml
mlops_cmc_2023/mlruns/0/5f23fd7b1f7e46c4a3fd271fee1ace31/: meta.yaml
mlops_cmc_2023/mlruns/0/d88d62005c1244dd84ee0f7542a5a737/: meta.yaml
mlops_cmc_2023/mlruns/0/f1368ffe76d44e5498346003d150141a/: meta.yaml
mlops_cmc_2023/mlruns/0/fe084f622dcf4ef69c37c338532b79e0/: meta.yaml
mlops_cmc_2023/mlruns/156278861991212752/: meta.yaml
mlops_cmc_2023/mlruns/171332826473732962/: meta.yaml
mlops_cmc_2023/mlruns/296586768128346967/: meta.yaml
mlops_cmc_2023/mlruns/342963253335411914/: meta.yaml
mlops_cmc_2023/mlruns/398780144630011468/: meta.yaml
mlops_cmc_2023/mlruns/401931042078844151/: meta.yaml
mlops_cmc_2023/mlruns/403307696237680512/: meta.yaml
mlops_cmc_2023/mlruns/452872144520151117/: meta.yaml
mlops_cmc_2023/mlruns/480905335395823128/: meta.yaml
mlops_cmc_2023/mlruns/710633809298376459/: meta.yaml
mlops_cmc_2023/mlruns/767643302343555018/: meta.yaml
mlops_cmc_2023/mlruns/811329262822777898/: meta.yaml
mlops_cmc_2023/mlruns/876240493472769628/: meta.yaml
triton/: Отчет.md
triton/model_repository/base_model/: config.pbtxt
(+116 files in other folders)
