[tool.poetry]
name = "mlops-cmc-2023"
version = "0.0.1"
description = "simple knn"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
scikit-learn = "^1.3.1"
pandas = "^1.1.5"

[tool.poetry.group.dev.dependencies]
python = "^3.8"
numpy = "^1.22.4"
scikit-learn = "^1.3.1"
pandas = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
