[tool.poetry]
name = "mlops-cmc-2023"
version = "0.0.1"
description = "simple knn"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
scikit-learn = "1.3.1"
joblib = "^1.0.1"
torch = "^1.7.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
